syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

package greet;

option csharp_namespace = "GrpcClient";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc ResponseWithOneof(HelloRequest) returns (ResponseMessage);
  rpc SayHello (HelloRequest) returns (HelloResponse);
  rpc StreamingFromServer (HelloRequest) returns (stream HelloResponse);
  rpc StreamingFromClient (stream HelloRequest) returns (HelloResponse);
  rpc StreamingBothWays (stream HelloRequest) returns (stream HelloResponse);
}

message HelloRequest {
  string name = 1;
  int32 age = 2;
  map<string, string> attributes = 3;
}

message HelloResponse {
  string message = 1;
  google.protobuf.StringValue description = 2;
  google.protobuf.Timestamp sent_date = 3;
  repeated string synonyms = 4;
}

message ResponseMessage {
  oneof result {
    Person person = 1;
    Error error = 2;
  }
}

message Person {
  string name = 1;
  int32 age = 2;
}

message Error {
  string name = 1;
  string details = 2;
}